--- a/index.html
+++ b/index.html
@@ -5,8 +5,226 @@
     <title>HTML Academy: Техномарт</title>
   </head>
   <body>
+  <header>
+    <div class="header-top container">
+      <a class="logo">
+        <img src="img/logo.png" width="220" height="47" alt="Логотип интернет-магазина Техномарт">
+      </a>
+      <form class="search-form" action="#" method="POST">
+        <label class="visually-hidden" for="search-block">Поиск</label>
+        <input id="search-block" type="search" name="search" placeholder="Поиск:">
+      </form>
+      <a href="#">Закладки: 0</a>
+      <a href="#">Корзина: 0</a>
+      <a href="#">Оформить заказ</a>
+    </div>
+    <div class="header-middle container">
+      <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>
+      <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+      <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
+      <a href="#">Войти</a>
+      <a href="#">Регистрация</a>
+    </div>
+    <div class="header-bottom container">
+      <nav>
+        <ul>
+          <li><a>Главная</a></li>
+          <li><a href="#">Компания</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="#">Спецпредложения</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main class="main-header">
+    <h1>Интернет-магазин Техномарт</h1>
+    <section>
+      <h2>Промо</h2>
+      <article>
+        <h3>Материалы</h3>
+        <a href="#">На любой вкус</a>
+      </article>
+      <article>
+        <h3>Инструмент</h3>
+        <a href="#">На все случай</a>
+      </article>
+      <article>
+        <h3>Техника</h3>
+        <a href="#">Для стройки</a>
+      </article>
+      <article>
+        <h3>Перфораторы</h3>
+        <p>Настоящие мужские игрушки</p>
+        <a href="#">Открыть каталог</a>
+      </article>
+      <article>
+        <h3>Скидки 50%</h3>
+        <a href="#">На 350 товаров</a>
+      </article>
+      <article>
+        <h3>Доставка</h3>
+        <a href="#">Бесплатно</a>
+      </article>
+    </section>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+    <section>
+      <header>
+        <h2>Популярные товары:</h2>
+        <a href="#">Все популярные товары</a>
+      </header>
 
+      <ul>
+        <li>
+          <div>
+            <a href="#">Купить</a>
+            <a href="#">В закладки</a>
+          </div>
+          <img src="img/puncher-1.png" width="184" height="164" alt="Перфоратор BOSCHBFG 9000">
+          <h3>Перфоратор BOSCHBFG 9000</h3>
+          <s>32500 Р.</s>
+          <p>25500 Р.</p>
+        </li>
+        <li>
+          <div>
+            <a href="#">Купить</a>
+            <a href="#">В закладки</a>
+          </div>
+          <img src="img/puncher-2.png" width="127" height="112" alt="Перфоратор BOSCHBFG 3000">
+          <h3>Перфоратор BOSCHBFG 3000</h3>
+          <s>22500 Р.</s>
+          <p>15500 Р.</p>
+        </li>
+        <li>
+          <div>
+            <a href="#">Купить</a>
+            <a href="#">В закладки</a>
+          </div>
+          <img src="img/puncher-3.png" width="144" height="128" alt="Перфоратор BOSCHBFG 6000">
+          <h3>Перфоратор BOSCHBFG 6000</h3>
+          <s>30500 Р.</s>
+          <p>25500 Р.</p>
+        </li>
+        <li>
+          <div>
+            <a href="#">Купить</a>
+            <a href="#">В закладки</a>
+          </div>
+          <img src="img/puncher-4.png" width="127" height="112" alt="Перфоратор BOSCHBFG 2000">
+          <h3>Перфоратор BOSCHBFG 2000</h3>
+          <s>22500 Р.</s>
+          <p>12500 Р.</p>
+        </li>
+      </ul>
+
+    </section>
+
+    <section>
+      <header>
+        <h2>Популярные производители:</h2>
+        <a href="#">Все производители</a>
+      </header>
+      <ul>
+        <li>
+          <img src="img/bosch.png" width="126" height="37" alt="Логотип компании Bosch">
+        </li>
+        <li>
+          <img src="img/makita.png" width="123" height="40" alt="Логотип компании Makita">
+        </li>
+        <li>
+          <img src="img/dewalt.png" width="146" height="44" alt="Логотип компании DeWalt">
+        </li>
+        <li>
+          <img src="img/interscol.png" width="200" height="76" alt="Логотип компании Интерскол">
+        </li>
+        <li>
+          <img src="img/hitachi.png" width="169" height="31" alt="Логотип компании Hitachi">
+        </li>
+        <li>
+          <img src="img/lg.png" width="121" height="73" alt="Логотип компании LG">
+        </li>
+        <li>
+          <img src="img/aeg.png" width="151" height="98" alt="Логотип компании AEG">
+        </li>
+        <li>
+          <img src="img/metabo.png" width="206" height="73" alt="Логотип компании Metabo">
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Сервисы</h2>
+      <dl>
+        <dt><button type="button">Доставка</button></dt>
+        <dd>
+          <h3>Доставка</h3>
+          <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
+        </dd>
+        <dt><button type="button">Гарантия</button></dt>
+        <dd>
+          <h3>Гарантия</h3>
+          <p>Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его
+            возгоранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.</p>
+        </dd>
+        <dt><button type="button">Кредит</button></dt>
+        <dd>
+          <h3>Кредит</h3>
+          <p>Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p>
+        </dd>
+      </dl>
+    </section>
+
+    <section>
+      <h2>Компания «Техномарт»</h2>
+      <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+      <p>Мы можем доставить ваш товар в самые отдаленные точки России!</p>
+      <p>Техномарт работает со многими транспортными компаниями:</p>
+      <ul>
+        <li>Деловые линии</li>
+        <li>Автотрейдинг</li>
+        <li>ЖелДорЭкспедиция</li>
+      </ul>
+      <a href="#">Подробнее о компании</a>
+    </section>
+
+    <section>
+      <h2>Контакты</h2>
+      <p>Вы можете забрать товар сами, заехав в наш офис:</p>
+      <img src="img/map.jpg" width="300" height="158" alt="Карта магазина Техномарт: город Санкт-Петербург, ул. Большая Конюшенная, 19">
+      <a href="#">Заблудились? Напишите нам!</a>
+    </section>
+  </main>
+  <footer>
+    <a>
+      <img src="img/logo.svg" width="220" height="47" alt="Логотип интернет-магазина Техномарт">
+    </a>
+    <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
+    <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+    <ul>
+      <li><a href="#">Компания</a></li>
+      <li><a href="#">Новости</a></li>
+      <li><a href="catalog.html">Каталог</a></li>
+      <li><a href="#">Доставка</a></li>
+      <li><a href="#">Контакты</a></li>
+    </ul>
+    <ul>
+      <li><a href="#">Материалы</a></li>
+      <li><a href="#">Техника</a></li>
+      <li><a href="#">Инструмент</a></li>
+      <li><a href="#">Спецпредложения</a></li>
+    </ul>
+
+    <p>© 2010–2019 Компания «Техномарт» Все права защищены</p>
+    <ul>
+      <li><a href="#">Вконтакте</a></li>
+      <li><a href="#">Фейсбук</a></li>
+      <li><a href="#">Инстаграм</a></li>
+    </ul>
+
+    <p>Обратная связь: <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
+    <p>Разработано — <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
+  </footer>
   </body>
 </html>
