--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,243 @@
   <title>Техномарт: Каталог</title>
 </head>
 <body>
+  <header>
+    <div class="header-top container">
+      <a class="logo" href="index.html">
+        <img src="img/logo.png" width="220" height="47" alt="Логотип интернет-магазина Техномарт">
+      </a>
+      <form class="search-form" action="#" method="POST">
+        <label class="visually-hidden" for="search-block">Поиск</label>
+        <input id="search-block" type="search" name="search" placeholder="Поиск:">
+      </form>
+      <a href="#">Закладки: 0</a>
+      <a href="#">Корзина: 0</a>
+      <a href="#">Оформить заказ</a>
+    </div>
+    <div class="header-middle container">
+      <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>
+      <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+      <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
+      <a href="#">Войти</a>
+      <a href="#">Регистрация</a>
+    </div>
+    <div class="header-bottom container">
+      <nav>
+        <ul>
+          <li><a href="index.html">Главная</a></li>
+          <li><a href="#">Компания</a></li>
+          <li><a>Каталог</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="#">Спецпредложения</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
+  <main>
+    <ul>
+      <li><a href="#">Каталог</a></li>
+      <li><a href="#">Инструмент</a></li>
+      <li>Перфораторы</li>
+    </ul>
+
+    <h1>Перфораторы</h1>
+    <section>
+      <h2>Фильтр:</h2>
+      <form action="#" method="GET">
+        <fieldset>
+          <legend>Цена:</legend>
+          <input type="range" name="price" id="price" min="0" max="30000" value="25500">
+          <p>0 - 30000</p>
+        </fieldset>
+        <fieldset>
+          <legend>Производители:</legend>
+          <ul>
+            <li>
+              <input type="checkbox" name="bosch" id="filter-bosch" checked>
+              <label for="filrer-bosch">Bosch</label>
+            </li>
+            <li>
+              <input type="checkbox" name="interscol" id="filter-interscol">
+              <label for="filrer-interscol">Интерскол</label>
+            </li>
+            <li>
+              <input type="checkbox" name="makita" id="filter-makita" checked>
+              <label for="filrer-makita">Makita</label>
+            </li>
+            <li>
+              <input type="checkbox" name="dewalt" id="filter-dewalt">
+              <label for="filrer-dewalt">Dewalt</label>
+            </li>
+            <li>
+              <input type="checkbox" name="hitachi" id="filter-hitachi">
+              <label for="filrer-hitachi">Hitachi</label>
+            </li>
+          </ul>
+        </fieldset>
+        <fieldset>
+          <legend>Питание:</legend>
+          <ul>
+            <li>
+              <input type="radio" name="power-supply" value="battery-charge" id="battery" checked>
+              <label for="battery">Аккумуляторные</label>
+            </li>
+            <li>
+              <input type="radio" name="power-supply" value="network-charge" id="network">
+              <label for="network">Сетевые</label>
+            </li>
+          </ul>
+        </fieldset>
+        <button type="submit">Показать</button>
+      </form>
+    </section>
+
+    <section>
+      <h2>Сортировка:</h2>
+      <a href="#">По цене</a>
+      <a href="#">По типу</a>
+      <a href="#">По функционалу</a>
+      <a href="#">По возростанию</a>
+      <a href="#">По убыванию</a>
+    </section>
+
+    <section>
+      <h2>Список товаров</h2>
+      <ul>
+        <li>
+          <div>
+            <a href="#">Купить</a>
+            <a href="#">В закладки</a>
+          </div>
+          <img src="img/puncher-3.png" width="144" height="128" alt="Перфоратор BOSCHBFG 6000">
+          <h3>Перфоратор BOSCHBFG 6000</h3>
+          <s>30500 Р.</s>
+          <p>25500 Р.</p>
+        </li>
+        <li>
+          <div>
+            <a href="#">Купить</a>
+            <a href="#">В закладки</a>
+          </div>
+          <img src="img/puncher-3.png" width="144" height="128" alt="Перфоратор BOSCHBFG 6000">
+          <h3>Перфоратор BOSCHBFG 6000</h3>
+          <s>30500 Р.</s>
+          <p>25500 Р.</p>
+        </li>
+        <li>
+          <div>
+            <a href="#">Купить</a>
+            <a href="#">В закладки</a>
+          </div>
+          <img src="img/puncher-3.png" width="144" height="128" alt="Перфоратор BOSCHBFG 6000">
+          <h3>Перфоратор BOSCHBFG 6000</h3>
+          <s>30500 Р.</s>
+          <p>25500 Р.</p>
+        </li>
+        <li>
+          <div>
+            <a href="#">Купить</a>
+            <a href="#">В закладки</a>
+          </div>
+          <img src="img/puncher-2.png" width="127" height="112" alt="Перфоратор BOSCHBFG 3000">
+          <h3>Перфоратор BOSCHBFG 3000</h3>
+          <s>22500 Р.</s>
+          <p>15500 Р.</p>
+        </li>
+        <li>
+          <div>
+            <a href="#">Купить</a>
+            <a href="#">В закладки</a>
+          </div>
+          <img src="img/puncher-3.png" width="144" height="128" alt="Перфоратор BOSCHBFG 6000">
+          <h3>Перфоратор BOSCHBFG 6000</h3>
+          <s>30500 Р.</s>
+          <p>25500 Р.</p>
+        </li>
+        <li>
+          <div>
+            <a href="#">Купить</a>
+            <a href="#">В закладки</a>
+          </div>
+          <img src="img/puncher-4.png" width="127" height="112" alt="Перфоратор BOSCHBFG 2000">
+          <h3>Перфоратор BOSCHBFG 2000</h3>
+          <p>12500 Р.</p>
+        </li>
+        <li>
+          <div>
+            <a href="#">Купить</a>
+            <a href="#">В закладки</a>
+          </div>
+          <img src="img/puncher-2.png" width="127" height="112" alt="Перфоратор BOSCHBFG 3000">
+          <h3>Перфоратор BOSCHBFG 3000</h3>
+          <s>22500 Р.</s>
+          <p>15500 Р.</p>
+        </li>
+        <li>
+          <div>
+            <a href="#">Купить</a>
+            <a href="#">В закладки</a>
+          </div>
+          <img src="img/puncher-3.png" width="144" height="128" alt="Перфоратор BOSCHBFG 6000">
+          <h3>Перфоратор BOSCHBFG 6000</h3>
+          <s>30500 Р.</s>
+          <p>25500 Р.</p>
+        </li>
+        <li>
+          <div>
+            <a href="#">Купить</a>
+            <a href="#">В закладки</a>
+          </div>
+          <img src="img/puncher-4.png" width="127" height="112" alt="Перфоратор BOSCHBFG 2000">
+          <h3>Перфоратор BOSCHBFG 2000</h3>
+          <p>12500 Р.</p>
+        </li>
+      </ul>
+      <ul>
+        <li><a>1</a></li>
+        <li><a href="#">2</a></li>
+        <li><a href="#">3</a></li>
+        <li><a href="#">Следующая</a></li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Пара слов о перфораторах</h2>
+      <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне. Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
+    </section>
+  </main>
+
+  <footer>
+    <a href="index.html">
+      <img src="img/logo.svg" width="220" height="47" alt="Логотип интернет-магазина Техномарт">
+    </a>
+    <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
+    <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+    <ul>
+      <li><a href="#">Компания</a></li>
+      <li><a href="#">Новости</a></li>
+      <li><a href="catalog.html">Каталог</a></li>
+      <li><a href="#">Доставка</a></li>
+      <li><a href="#">Контакты</a></li>
+    </ul>
+    <ul>
+      <li><a href="#">Материалы</a></li>
+      <li><a href="#">Техника</a></li>
+      <li><a href="#">Инструмент</a></li>
+      <li><a href="#">Спецпредложения</a></li>
+    </ul>
+
+    <p>© 2010–2019 Компания «Техномарт» Все права защищены</p>
+    <ul>
+      <li><a href="#">Вконтакте</a></li>
+      <li><a href="#">Фейсбук</a></li>
+      <li><a href="#">Инстаграм</a></li>
+    </ul>
+
+    <p>Обратная связь: <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
+    <p>Разработано — <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
+  </footer>
 </body>
 </html>
