--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/favicons/180.png">
+    <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
   <header>
     <div class="header-top container">
       <a class="logo">
-        <img src="img/logo.png" width="220" height="47" alt="Логотип интернет-магазина Техномарт">
+        <img src="img/logo-technomart.svg" width="108" height="18" alt="Логотип интернет-магазина Техномарт">
       </a>
       <form class="search-form" action="#" method="POST">
         <label class="visually-hidden" for="search-block">Поиск</label>
@@ -82,7 +86,7 @@
             <a href="#">Купить</a>
             <a href="#">В закладки</a>
           </div>
-          <img src="img/puncher-1.png" width="184" height="164" alt="Перфоратор BOSCHBFG 9000">
+          <img src="img/perforator_01.jpg" width="218" height="170" alt="Перфоратор BOSCHBFG 9000">
           <h3>Перфоратор BOSCHBFG 9000</h3>
           <s>32500 Р.</s>
           <p>25500 Р.</p>
@@ -92,7 +96,7 @@
             <a href="#">Купить</a>
             <a href="#">В закладки</a>
           </div>
-          <img src="img/puncher-2.png" width="127" height="112" alt="Перфоратор BOSCHBFG 3000">
+          <img src="img/perforator_02.jpg" width="218" height="170" alt="Перфоратор BOSCHBFG 3000">
           <h3>Перфоратор BOSCHBFG 3000</h3>
           <s>22500 Р.</s>
           <p>15500 Р.</p>
@@ -102,7 +106,7 @@
             <a href="#">Купить</a>
             <a href="#">В закладки</a>
           </div>
-          <img src="img/puncher-3.png" width="144" height="128" alt="Перфоратор BOSCHBFG 6000">
+          <img src="img/perforator_03.jpg" width="218" height="170" alt="Перфоратор BOSCHBFG 6000">
           <h3>Перфоратор BOSCHBFG 6000</h3>
           <s>30500 Р.</s>
           <p>25500 Р.</p>
@@ -112,7 +116,7 @@
             <a href="#">Купить</a>
             <a href="#">В закладки</a>
           </div>
-          <img src="img/puncher-4.png" width="127" height="112" alt="Перфоратор BOSCHBFG 2000">
+          <img src="img/perforator_04.jpg" width="218" height="170" alt="Перфоратор BOSCHBFG 2000">
           <h3>Перфоратор BOSCHBFG 2000</h3>
           <s>22500 Р.</s>
           <p>12500 Р.</p>
@@ -128,28 +132,28 @@
       </header>
       <ul>
         <li>
-          <img src="img/bosch.png" width="126" height="37" alt="Логотип компании Bosch">
+          <img src="img/brand_Bosch.png" width="126" height="37" alt="Логотип компании Bosch">
         </li>
         <li>
-          <img src="img/makita.png" width="123" height="40" alt="Логотип компании Makita">
+          <img src="img/brand_Makita.png" width="123" height="40" alt="Логотип компании Makita">
         </li>
         <li>
-          <img src="img/dewalt.png" width="146" height="44" alt="Логотип компании DeWalt">
+          <img src="img/brand_DeWALT.png" width="146" height="44" alt="Логотип компании DeWalt">
         </li>
         <li>
-          <img src="img/interscol.png" width="200" height="76" alt="Логотип компании Интерскол">
+          <img src="img/brand_Interskol.png" width="200" height="76" alt="Логотип компании Интерскол">
         </li>
         <li>
-          <img src="img/hitachi.png" width="169" height="31" alt="Логотип компании Hitachi">
+          <img src="img/brand_Hitachi.png" width="169" height="31" alt="Логотип компании Hitachi">
         </li>
         <li>
-          <img src="img/lg.png" width="121" height="73" alt="Логотип компании LG">
+          <img src="img/brand_LG.png" width="121" height="73" alt="Логотип компании LG">
         </li>
         <li>
-          <img src="img/aeg.png" width="151" height="98" alt="Логотип компании AEG">
+          <img src="img/brand_AEG.png" width="151" height="96" alt="Логотип компании AEG">
         </li>
         <li>
-          <img src="img/metabo.png" width="206" height="73" alt="Логотип компании Metabo">
+          <img src="img/brand_Metabo.png" width="204" height="69" alt="Логотип компании Metabo">
         </li>
       </ul>
     </section>
@@ -192,13 +196,14 @@
     <section>
       <h2>Контакты</h2>
       <p>Вы можете забрать товар сами, заехав в наш офис:</p>
-      <img src="img/map.jpg" width="300" height="158" alt="Карта магазина Техномарт: город Санкт-Петербург, ул. Большая Конюшенная, 19">
+      <img src="img/map_mini.png" width="300" height="158"
+           alt="Карта магазина Техномарт: город Санкт-Петербург, ул. Большая Конюшенная, 19">
       <a href="#">Заблудились? Напишите нам!</a>
     </section>
   </main>
   <footer>
     <a>
-      <img src="img/logo.svg" width="220" height="47" alt="Логотип интернет-магазина Техномарт">
+      <img src="img/logo-technomart.svg" width="108" height="18" alt="Логотип интернет-магазина Техномарт">
     </a>
     <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
     <a href="tel:+78125550555">+7 (812) 555-05-55</a>
