--- a/catalog.html
+++ b/catalog.html
@@ -3,12 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>Техномарт: Каталог</title>
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicons/180.png">
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
 <body>
   <header>
     <div class="header-top container">
       <a class="logo" href="index.html">
-        <img src="img/logo.png" width="220" height="47" alt="Логотип интернет-магазина Техномарт">
+        <img src="img/logo-technomart.svg" width="108" height="18" alt="Логотип интернет-магазина Техномарт">
       </a>
       <form class="search-form" action="#" method="POST">
         <label class="visually-hidden" for="search-block">Поиск</label>
@@ -115,7 +119,7 @@
             <a href="#">Купить</a>
             <a href="#">В закладки</a>
           </div>
-          <img src="img/puncher-3.png" width="144" height="128" alt="Перфоратор BOSCHBFG 6000">
+          <img src="img/perforator_03.jpg" width="218" height="170" alt="Перфоратор BOSCHBFG 6000">
           <h3>Перфоратор BOSCHBFG 6000</h3>
           <s>30500 Р.</s>
           <p>25500 Р.</p>
@@ -125,7 +129,7 @@
             <a href="#">Купить</a>
             <a href="#">В закладки</a>
           </div>
-          <img src="img/puncher-3.png" width="144" height="128" alt="Перфоратор BOSCHBFG 6000">
+          <img src="img/perforator_03.jpg" width="218" height="170" alt="Перфоратор BOSCHBFG 6000">
           <h3>Перфоратор BOSCHBFG 6000</h3>
           <s>30500 Р.</s>
           <p>25500 Р.</p>
@@ -135,7 +139,7 @@
             <a href="#">Купить</a>
             <a href="#">В закладки</a>
           </div>
-          <img src="img/puncher-3.png" width="144" height="128" alt="Перфоратор BOSCHBFG 6000">
+          <img src="img/perforator_03.jpg" width="218" height="170" alt="Перфоратор BOSCHBFG 6000">
           <h3>Перфоратор BOSCHBFG 6000</h3>
           <s>30500 Р.</s>
           <p>25500 Р.</p>
@@ -145,7 +149,7 @@
             <a href="#">Купить</a>
             <a href="#">В закладки</a>
           </div>
-          <img src="img/puncher-2.png" width="127" height="112" alt="Перфоратор BOSCHBFG 3000">
+          <img src="img/perforator_02.jpg" width="218" height="170" alt="Перфоратор BOSCHBFG 3000">
           <h3>Перфоратор BOSCHBFG 3000</h3>
           <s>22500 Р.</s>
           <p>15500 Р.</p>
@@ -155,7 +159,7 @@
             <a href="#">Купить</a>
             <a href="#">В закладки</a>
           </div>
-          <img src="img/puncher-3.png" width="144" height="128" alt="Перфоратор BOSCHBFG 6000">
+          <img src="img/perforator_03.jpg" width="218" height="170" alt="Перфоратор BOSCHBFG 6000">
           <h3>Перфоратор BOSCHBFG 6000</h3>
           <s>30500 Р.</s>
           <p>25500 Р.</p>
@@ -165,7 +169,7 @@
             <a href="#">Купить</a>
             <a href="#">В закладки</a>
           </div>
-          <img src="img/puncher-4.png" width="127" height="112" alt="Перфоратор BOSCHBFG 2000">
+          <img src="img/perforator_04.jpg" width="218" height="170" alt="Перфоратор BOSCHBFG 2000">
           <h3>Перфоратор BOSCHBFG 2000</h3>
           <p>12500 Р.</p>
         </li>
@@ -174,7 +178,7 @@
             <a href="#">Купить</a>
             <a href="#">В закладки</a>
           </div>
-          <img src="img/puncher-2.png" width="127" height="112" alt="Перфоратор BOSCHBFG 3000">
+          <img src="img/perforator_02.jpg" width="218" height="170" alt="Перфоратор BOSCHBFG 3000">
           <h3>Перфоратор BOSCHBFG 3000</h3>
           <s>22500 Р.</s>
           <p>15500 Р.</p>
@@ -184,7 +188,7 @@
             <a href="#">Купить</a>
             <a href="#">В закладки</a>
           </div>
-          <img src="img/puncher-3.png" width="144" height="128" alt="Перфоратор BOSCHBFG 6000">
+          <img src="img/perforator_03.jpg" width="218" height="170" alt="Перфоратор BOSCHBFG 6000">
           <h3>Перфоратор BOSCHBFG 6000</h3>
           <s>30500 Р.</s>
           <p>25500 Р.</p>
@@ -194,7 +198,7 @@
             <a href="#">Купить</a>
             <a href="#">В закладки</a>
           </div>
-          <img src="img/puncher-4.png" width="127" height="112" alt="Перфоратор BOSCHBFG 2000">
+          <img src="img/perforator_04.jpg" width="218" height="170" alt="Перфоратор BOSCHBFG 2000">
           <h3>Перфоратор BOSCHBFG 2000</h3>
           <p>12500 Р.</p>
         </li>
@@ -215,7 +219,7 @@
 
   <footer>
     <a href="index.html">
-      <img src="img/logo.svg" width="220" height="47" alt="Логотип интернет-магазина Техномарт">
+      <img src="img/logo-technomart.svg" width="108" height="18" alt="Логотип интернет-магазина Техномарт">
     </a>
     <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
     <a href="tel:+78125550555">+7 (812) 555-05-55</a>
